--- a/style.css
+++ b/style.css
@@ -1,7 +1,57 @@
 section {
     /* fixes nav obstructing sections when using anchors */
-    padding-top: 70px;
-    margin-top: -70px;
+    padding-top: 5rem;
+    margin-top: -5rem;
+}
+
+section#home {
+    display: block;
+    color: white;
+}
+
+.video-background {
+    height: 100%;
+    position: relative;
+}
+
+.video-background .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -100;
+    background-size: cover;
+    overflow: hidden;
+}
+
+.video-background .background video {
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+}
+
+.video-background .overlay {
+    padding: 15rem 1rem;
+    text-align: center;
+}
+
+section#features {
+
+}
+
+section#team {
+
+}
+
+section#pricing {
+
+}
+
+footer {
+    background: #f5f5f5;
+    padding: 1rem;
 }
 
 .feature {
