--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ section#home {
     width: 100%;
     height: 100%;
     position: relative;
+    background-color: black; 
+    opacity: 0.75; 
+    background-position: center; 
 }
 
 .video-background .background {
