--- a/style.css
+++ b/style.css
@@ -20,9 +20,6 @@ section#home {
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: black; 
-    opacity: 0.75; 
-    background-position: center; 
 }
 
 .video-background .background {
@@ -34,6 +31,7 @@ section#home {
     z-index: -100;
     background-size: cover;
     overflow: hidden;
+    background: black center;
 }
 
 .video-background .background video {
@@ -41,6 +39,7 @@ section#home {
     min-height: 100%;
     width: auto;
     height: auto;
+    opacity: 0.75;
 }
 
 .video-background .overlay {
