--- a/style.css
+++ b/style.css
@@ -2,6 +2,31 @@ body {
     position: relative;
 }
 
+nav, .nav-link, .navbar-brand img {
+    transition: 200ms all ease;
+}
+
+.navbar-brand img {
+    width: 120px;
+}
+
+.nav-top .navbar-brand img {
+    width: 180px;
+}
+
+.bg-dark {
+    background-color: rgb(48, 48, 48) !important;
+}
+
+.nav-top {
+    background-color: transparent !important;
+}
+
+.nav-top .nav-link {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
 section {
     padding: 5rem 0;
 }
@@ -10,10 +35,6 @@ section#home {
     display: block;
     color: white;
     padding: 0;
-}
-
-.bg-dark {
-    background-color: #333 !important;
 }
 
 .video-background {
