--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
+/* required for scrollspy */
 body {
     position: relative;
 }
 
+/* general section padding */
+section {
+    padding: 5rem 0;
+}
+
 /******************************/
-/*           NAVBAR           */
+/*         NAVIGATION         */
 /******************************/
 
 .navbar-animated, .navbar-animated .nav-link, .navbar-animated .navbar-brand img {
     transition: 200ms all ease;
 }
 
-<<<<<<< HEAD
 nav ul li a:hover {
-    background-color: #fff; 
-
+    background-color: #fff;
 }
 
 nav ul li a {
@@ -22,12 +26,10 @@ nav ul li a {
     padding:40px 80px;
     font-size: 20px;
     font-weight: 300;
-    color: 323642;
+    color: #323642;
     transition: background-color 0.5s ease; 
 }
 
-=======
->>>>>>> 9f81371ecdb6c4eb9513ab82c32dd43cb3ef1f02
 .navbar-brand img {
     width: 120px;
 }
@@ -49,8 +51,12 @@ nav ul li a {
     padding-bottom: 2rem;
 }
 
-section {
-    padding: 5rem 0;
+nav ul li a:hover {
+    background-color: rgb(32, 29, 29);
+}
+
+nav ul li a {
+    transition: background-color 0.5s ease;
 }
 
 /******************************/
@@ -63,26 +69,6 @@ section#home {
     padding: 0;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-.bg-dark {
-    background-color: #333 !important;
-}
-
-nav ul li a:hover {
-    background-color: rgb(32, 29, 29); 
-}
-
-nav ul li a {
-    transition: background-color 0.5s ease; 
-    
-}
-
-
-=======
->>>>>>> 7f4d8f726ef95bba39fb621158a10f02aa1e4914
-=======
->>>>>>> 9f81371ecdb6c4eb9513ab82c32dd43cb3ef1f02
 .video-background {
     width: 100%;
     height: 100%;
@@ -117,19 +103,10 @@ nav ul li a {
 /******************************/
 /*          FEATURES          */
 /******************************/
-<<<<<<< HEAD
-=======
-
-section#features {
->>>>>>> 9f81371ecdb6c4eb9513ab82c32dd43cb3ef1f02
-
 section#features {
 
-<<<<<<< HEAD
 }
 
-=======
->>>>>>> 9f81371ecdb6c4eb9513ab82c32dd43cb3ef1f02
 .feature {
     text-align: center;
 }
