--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* required for scrollspy */
 body {
     position: relative;
-    font-family: 'Titillium Web ', Calibri, sans-serif; 
+    font-family: 'Titillium Web ', Calibri, sans-serif;
     
 }
 
@@ -33,7 +33,7 @@ nav ul li a {
     padding:40px 60px;
     font-size: 20px;
     font-weight: 300;
-    color: 323642;
+    color: #323642;
     transition: background-color 0.5s ease; 
 }
 
@@ -134,7 +134,48 @@ section#features {
 /******************************/
 
 section#pricing {
+    background-color: #222;
+    color: white;
+}
 
+.pricing-tier {
+    text-align: center;
+}
+
+.pricing-tier .name {
+    display: block;
+    font-size: 1.2rem;
+    background: #640000;
+    color: #fff;
+    padding: 0.5rem;
+    font-weight: 300;
+    border-radius: 0.5rem 0.5rem 0 0;
+}
+
+.pricing-tier .cost {
+    font-size: 5rem;
+    font-weight: 300;
+    display: block;
+    border-bottom: 2px solid #444;
+}
+
+.pricing-tier .cost::before {
+    content: "$";
+    font-size: 1.75rem;
+    position: relative;
+    top: -2.5rem;
+}
+
+.pricing-tier .features {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 1.25rem;
+}
+
+.pricing-tier .features li {
+    padding: 0.5rem 0;
+    border-bottom: 2px solid #444;
 }
 
 /******************************/
