--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ section#team {
 /******************************/
 
 footer {
-    background: #f5f5f5;
+    background: #222;
     padding: 1rem;
+    color: #888;
 }
