--- a/style.css
+++ b/style.css
@@ -185,7 +185,18 @@ section#pricing {
 section#team {
 
 }
-
+p.title{
+    font-family: "Times New Roman", Times, serif;
+    font-size: 80;
+    text-align: center;
+    font-weight: bold;
+    }
+h2.name{
+    font-family: "Times New Roman", Times, serif;
+    font-size: 80;
+    text-align: center;
+    font-weight: bold;
+    }
 .team-member {
     text-align: center;
 }
