Changed some Fonts

--- a/style.css
+++ b/style.css
@@ -185,14 +185,14 @@ section#team {
 
 }
 p.title{
-    font-family: "Times New Roman", Times, serif;
+    font-family: "American Typewriter", serif;
     font-size: 80;
     text-align: center;
     font-weight: bold;
     }
 h2.name{
-    font-family: "Times New Roman", Times, serif;
-    font-size: 80;
+    font-family: "Marker Felt",fantasy;
+    font-size: 200;
     text-align: center;
     font-weight: bold;
     }
