--- a/style.css
+++ b/style.css
@@ -184,13 +184,13 @@ section#pricing {
 section#team {
 
 }
-p.title{
+.title{
     font-family: "American Typewriter", serif;
     font-size: 80;
     text-align: center;
     font-weight: bold;
     }
-h2.name{
+.name{
     font-family: "Marker Felt",fantasy;
     font-size: 200;
     text-align: center;
