--- a/style.css
+++ b/style.css
@@ -185,13 +185,13 @@ section#team {
 
 }
 .title{
-    font-family: "American Typewriter", serif;
+    font-family: "Arial", serif;
     font-size: 80;
     text-align: center;
     font-weight: bold;
     }
 .name{
-    font-family: "Marker Felt",fantasy;
+    font-family: "Trebuchet MS",sans-serif;
     font-size: 200;
     text-align: center;
     font-weight: bold;
