--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h1, .lead {
     text-align: center;
 }
 
+html.js .scrollreveal {
+    visibility: hidden;
+}
+
 .delay-200 {
     animation-delay: 200ms;
 }
