--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ section#team {
     width: 50%;
   }
 
-.team-member .overlay {
+.cont2 .overlay {
     position: absolute;
     top: 0;
     bottom: 0;
