--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-/* required for scrollspy */
 body {
-    position: relative;
-    font-family: 'Titillium Web', "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 100;
+    font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* general section padding */
@@ -95,12 +92,16 @@ section#home {
     display: block;
     color: white;
     padding: 0;
+    height: 100vh;
 }
 
 .video-background {
     width: 100%;
     height: 100%;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .video-background .background {
@@ -124,7 +125,7 @@ section#home {
 }
 
 .video-background .overlay {
-    padding: 15rem 1rem;
+    margin-top: 3rem;
     text-align: center;
 }
 
