--- a/style.css
+++ b/style.css
@@ -234,8 +234,8 @@ section#team {
 }
 
 .team-member .portrait {
-    width: 200%;
-    height: 200%;
+    width: 150%;
+    height: 150%;
     border-radius: 75px;
 }
 
@@ -261,13 +261,17 @@ section#team {
 
 .cont2 .overlay {
     position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
     height: 100%;
     width: 100%;
     opacity: 0;
     transition: .5s ease;
   }
 .cont2:hover .overlay {
-    opacity: 0.75;
+    opacity: 0.85;
   }
 
 
