--- a/style.css
+++ b/style.css
@@ -240,19 +240,21 @@ section#team {
 }
 
 .team-member .title {
+    text-align: center
     position: absolute;
     text-transform: uppercase;
     font-size: 1.15rem;
-    font-weight: 300;
+    font-weight: 500;
     text-align: center;
     margin-top: 0.5rem;
 }
 .team-member .text {
     color: black;
-    font-size: 12px;
+    font-size: 16px;
+    font-weight: 5;
     position: absolute;
-    top: 5%;
-    left: 5%;
+    top: 15%;
+    left: 15%;
   }
 .team-member .cont2 {
     position: relative;
@@ -269,6 +271,7 @@ section#team {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
+    background-color:white;
   }
 .cont2:hover .overlay {
     opacity: 0.85;
