--- a/style.css
+++ b/style.css
@@ -234,8 +234,8 @@ section#team {
 }
 
 .team-member .portrait {
-    width: 150%;
-    height: 150%;
+    width: 100%;
+    height: 100%;
     border-radius: 75px;
 }
 
@@ -250,11 +250,11 @@ section#team {
 }
 .team-member .text {
     color: black;
-    font-size: 16px;
-    font-weight: 5;
+    font-size: 14px;
+    font-weight: bold;
     position: absolute;
     top: 15%;
-    left: 15%;
+    left: 5%;
   }
 .team-member .cont2 {
     position: relative;
