--- a/style.css
+++ b/style.css
@@ -44,11 +44,11 @@ html.js .scrollreveal {
 .btn-primary:not([disabled]):not(.disabled):active {
     background-color: #660000;
     border-color: #440000;
-    box-shadow: 0 0 0 .2rem rgba(68,0,0,.5)
+    box-shadow: 0 0 0 .2rem rgba(68, 0, 0, .5)
 }
 
 .btn-primary:focus {
-    box-shadow: 0 0 0 .2rem rgba(68,0,0,.5)
+    box-shadow: 0 0 0 .2rem rgba(68, 0, 0, .5)
 }
 
 /******************************/
@@ -64,7 +64,7 @@ html.js .scrollreveal {
 }
 
 nav ul li a:hover {
-    background-color: #fff; 
+    background-color: #fff;
 
 }
 
@@ -251,56 +251,54 @@ section#team {
     margin: 1rem 0;
 }
 
-.team-member .name {
-    font-size: 24px;
-    text-align: center;
-    font-weight: bold;
+.team-member .hover-reveal {
+    position: relative;
 }
 
-.team-member .portrait {
-    width: 150%;
-    height: 150%;
-    border-radius: 75px;
+.team-member .hover-reveal .background {
+    opacity: 1;
+    transition: 200ms all ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.team-member .background img {
+    border-radius: 100px;
 }
 
 .team-member .title {
-    position: absolute;
     text-transform: uppercase;
-    font-size: 1.15rem;
-    font-weight: 500;
-    text-align: center;
-    margin-top: 0.5rem;
 }
-.team-member .text {
-    color: black;
-    font-size: 14px;
-    font-weight: bold;
-    position: absolute;
-    top: 15%;
-    left: 5%;
-  }
-.team-member .cont2 {
-    position: relative;
-    width: 50%;
-  }
 
-.cont2 .overlay {
+.team-member .hover-reveal .overlay {
     position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    height: 150%;
-    width: 150%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     opacity: 0;
-    transition: .5s ease;
-    background-color:white;
-  }
-.cont2:hover .overlay {
-    opacity: 0.85;
-  }
+    transition: 200ms all ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: default;
+}
 
+.team-member .hover-reveal .description {
+    margin: 0;
+}
 
+.team-member .hover-reveal:hover .background {
+    opacity: 0.33;
+    filter: blur(3px);
+}
+
+.team-member .hover-reveal:hover .overlay {
+    opacity: 1;
+}
 
 /******************************/
 /*           FOOTER           */
