Main Team Title Change

--- a/style.css
+++ b/style.css
@@ -241,7 +241,10 @@ section#pricing {
 /******************************/
 /*            TEAM            */
 /******************************/
-
+.main1{
+    font-size: 30px;
+    font-weight: bold;    
+}
 section#team {
 
 }
