--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ section#home {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .video-background .background {
@@ -311,6 +312,7 @@ section#team {
 }
 
 .team-member .hover-reveal .description {
+    max-width: 100%;
     margin: 0;
 }
 
